refactored configuration, added logging support

--- a/config/wiki/conf.yaml
+++ b/config/wiki/conf.yaml
@@ -1,6 +1,6 @@
  react_on:        
-          - wiki:
-          - вики:
-          - скажи википедия,
+          - "wiki:"
+          - "вики:"
+          - "скажи википедия"
 
           
