removed complicated reater/limitter for api, left a singlthreaded one; googleimg asks for a capthca recognition.

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,5 +1,5 @@
 regexps:
-    .*axax.*: 
+    .*ахах.*: 
                 ахахахуел, гиена
     
     (?=.*маша.*)(?=.*старая.*): 
@@ -44,6 +44,8 @@ regexps:
 
     .*триста.*: 
         сколько сколько?
+    \bнет\b:
+        пидора ответ
 
 
 in_lines:
@@ -68,4 +70,9 @@ in_lines:
        
     и я: 
         свинья?
-               
+
+    привет:
+        и тебе               
+
+    ахаха:
+        пососи хуйца, гиена
