--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,4 +1,12 @@
 regexps:
+    .*почему.*:
+            почему? потому что пошел на хуй, вот почему!
+    .*ты тупой.*: 
+            сам ты тупой, мразина
+    капча_с_картинки_.*: 
+            ну и глупые же вы.
+    .*нахуй.*нуж.*: 
+                сам ты нахуй нужен, мразина
     .*ахах.*: 
                 ахахахуел, гиена
     
