removed wall post, added additional dict for approve module, enabled images in approved module

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,14 +1,10 @@
 regexps:
-    .*почему.*:
-            почему? потому что пошел на хуй, вот почему!
     .*ты тупой.*: 
             сам ты тупой, мразина
     капча_с_картинки_.*: 
             ну и глупые же вы.
     .*нахуй.*нуж.*: 
                 сам ты нахуй нужен, мразина
-    .*ахах.*: 
-                ахахахуел, гиена
     
     (?=.*маша.*)(?=.*старая.*): 
                 ты чо ахуел мразина очко твое старое
@@ -42,7 +38,7 @@ regexps:
                     
     .*бот .*: |       
             >>бот
-            следи за языком, мудила"
+            следи за языком, мудила
 
     .*дота.*: 
         лучше бы ты в пукан долбился, чем в дoту играл
@@ -81,6 +77,3 @@ in_lines:
 
     привет:
         и тебе               
-
-    ахаха:
-        пососи хуйца, гиена
