Added responses, fixed alarm help, other small fixes

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,8 +1,30 @@
 regexps:
     .*почему.*:
             почему? потому что пошел на хуй, вот почему!
+    .*какие.*:
+            те самые
+    \Aкакой.*:
+            большой и толстый
+    \Aгде.*:
+            в пизде
+    .*когда.*:
+            да никогда, заебал уже
+    \Aчто\Z:
+            где когда
+    \Aта*к\?*\Z:
+            хуяк
+    .*мудак.*:
+            от мудака слышу!
+    .*пидор.*:
+            а почему это вас так беспокоит?
+    \Aчо*\?*\Z:
+            хуй в очо!
+    .*бесишь.*:
+            хотите поговорить об этом?
     .*ты тупой.*: 
             сам ты тупой, мразина
+    \Aну*:
+            баранки гну
     капча_с_картинки_.*: 
             ну и глупые же вы.
     .*нахуй.*нуж.*: 
