Fixed bugs with alarm and reply modules

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -5,25 +5,27 @@ regexps:
             те самые
     \Aкакой.*:
             большой и толстый
+    \Aеба+ть\Z:
+            копать
     \Aгде.*:
             в пизде
     .*когда.*:
             да никогда, заебал уже
-    \Aчто\Z:
+    \Aчто+\?*:
             где когда
-    \Aта*к\?*\Z:
+    \Aта+к\?*\Z:
             хуяк
     .*мудак.*:
             от мудака слышу!
     .*пидор.*:
             а почему это вас так беспокоит?
-    \Aчо*\?*\Z:
+    \Aчо+\?*\Z:
             хуй в очо!
     .*бесишь.*:
             хотите поговорить об этом?
     .*ты тупой.*: 
             сам ты тупой, мразина
-    \Aну*:
+    \Aну+\Z:
             баранки гну
     капча_с_картинки_.*: 
             ну и глупые же вы.
@@ -62,7 +64,7 @@ regexps:
     .*доту.*: 
             лучше бы ты в пукан долбился, чем в дoту играл
                     
-    .*бот .*: |       
+    .*бо+т.*: |
             >>бот
             следи за языком, мудила"
 
