repeating for 5 sec in case of  vkapi-to-many-requests; wall-post-pixelsort for friends add.

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,4 +1,9 @@
 regexps:
+    .*\bдаун\b.*: |
+             >>даун
+             дегенрат дегенерата узнает, я смотрю.
+    .*\bалло\b.*:
+            хуйло, епта. не аллокай мне тут, пидар
     .*ты тупой.*: 
             сам ты тупой, мразина
     капча_с_картинки_.*: 
@@ -36,7 +41,7 @@ regexps:
     .*доту.*: 
             лучше бы ты в пукан долбился, чем в дoту играл
                     
-    .*бот .*: |       
+    .*\bбот\b.*: |       
             >>бот
             следи за языком, мудила
 
@@ -50,6 +55,10 @@ regexps:
         сколько сколько?
     \bнет\b:
         пидора ответ
+    \bпочему\b:
+        почему? Потому что пошел на хуй, вот почему.
+    .*тюлень это кто.*:
+        привет, тюлень - это я.
 
 
 in_lines:
