--- a/config/sea_battle/conf.yaml
+++ b/config/sea_battle/conf.yaml
@@ -3,3 +3,8 @@ simple_game: тюлень, хотим в морской бой
 qa_game: тюлень, хотим в морской бой с вопросами
 
 stop_game: тюлень, мы закончили морской бой
+
+questions:
+    - Что было, есть и что будет есть: ленин
+    - Как какать быстро: стоя
+    - Почему?: потому что пошел нахуй, вот почему
