--- a/config/sea_battle/conf.yaml
+++ b/config/sea_battle/conf.yaml
@@ -5,6 +5,10 @@ qa_game: тюлень, хотим в морской бой с вопросами
 stop_game: тюлень, мы закончили морской бой
 
 questions:
-    - Что было, есть и что будет есть: ленин
-    - Как какать быстро: стоя
-    - Почему?: потому что пошел нахуй, вот почему
+    - Что было, есть и что будет есть: "ленин"
+    - Как какать быстро: "стоя"
+    - Почему?: "потому что пошел нахуй, вот почему"
+    - А?: "б"
+    - Чо?: "хуй в очо"
+    - Где лучшие тусовки?: "у меня в штанах"
+    - Что ты делал прошлым летом?: "пинал хуи"
