Debugged almost everything. TODO: Test on real games!!

--- a/test_scenario.yaml
+++ b/test_scenario.yaml
@@ -16,40 +16,115 @@ player_1:
         - |
             загрузи карту
             0 0 0 0 2 0 0 0 0 1
-            0 0 0 0 2 0 0 0 0 0
-            0 2 2 0 0 0 0 2 2 0
+            2 2 0 0 2 0 0 0 0 0
+            0 0 0 0 0 0 0 2 2 0
             0 0 0 0 0 0 0 0 0 0
-            0 3 3 3 0 0 3 3 3 0
-            0 0 0 0 0 0 0 0 0 0
-            0 0 0 4 4 4 4 0 0 0
-            0 0 0 0 0 0 0 0 0 0
-            0 0 0 1 0 0 0 0 1 0
-            0 1 0 0 0 0 0 0 0 0
+            0 0 0 0 0 1 0 0 0 0
+            0 3 3 3 0 0 0 0 3 0
+            0 0 0 0 0 0 4 0 3 0
+            0 0 0 0 0 0 4 0 3 0
+            0 0 0 1 0 0 4 0 0 0
+            0 1 0 0 0 0 4 0 0 0
         - играю с командой подзалупник2
-        - ответ 1 ленин
-        - "атакую: 1,1"
+        - ответ 1 1
+        - "атакую: 1,12"
         - покажи карты
-        - ответ 2 стоя
+        - "атакую: 31,1"
+        - покажи карты
         - "атакую: 3,6"
         - покажи карты
-        - "ответ 3 потому что пошел нахуй, вот почему"
-        - "атакую: 3,6"
+        - ответ 2 2
+        - "атакую: 1,2"
         - покажи карты
+        - "атакую: 2,5"
+        - покажи карты
+        - ответ 3 3
         - "атакую: 3,5"
         - покажи карты
+        - ответ 4 4
         - "атакую: 3,7"
         - покажи карты
-        - ответ 4 Б
-        - "атакую: 2,1"
+        - ответ 5 6
+        - "атакую: 3,6"
         - покажи карты
-        - ответ 5 хуй в очо
-        - "атакую: 5,2"
+        - "атакую: 5,6"
         - покажи карты
-        - ответ 6 у меня в штанах
-        - "атакую: 1,10"
+        - "атакую: 5,7"
         - покажи карты
-        - ответ 7 пинал хуи
-        - "атакую: -2,7"
+        - ответ 5 6
+        - "атакую: 5,8"
+        - ответ 6 6
+        - "атакую: 5,8"
+        - покажи карты
+        - ответ 7 7
+        - "атакую: 5,4"
+        - покажи карты
+        - ответ 8 8
+        - "атакую: 6,3"
+        - покажи карты
+        - ответ 9 9
+        - "атакую: 6,4"
+        - покажи карты
+        - ответ 10 10
+        - "атакую: 6,5"
+        - покажи карты
+        - ответ 11 11
+        - "атакую: 6,6"
+        - покажи карты
+        - ответ 18 18
+        - "атакую: 4,6"
+        - покажи карты
+        - ответ 12 12
+        - "атакую: 2,2"
+        - покажи карты
+        - ответ 13 13
+        - "атакую: 1,2"
+        - покажи карты
+        - ответ 14 14
+        - "атакую: 8,2"
+        - покажи карты
+        - ответ 15 15
+        - "атакую: 7,2"
+        - покажи карты
+        - ответ 16 16
+        - "атакую: 9,9"
+        - покажи карты
+        - ответ 17 17
+        - "атакую: 1,0"
+        - покажи карты
+        - ответ 19 19
+        - "атакую: 9,0"
+        - покажи карты
+        - ответ 20 20
+        - "атакую: 7,4"
+        - покажи карты
+        - ответ 21 21
+        - "атакую: 8,4"
+        - покажи карты
+        - ответ 22 22
+        - "атакую: 1,4"
+        - покажи карты
+        - ответ 23 23
+        - "атакую: 2,4"
+        - покажи карты
+        - ответ 24 24
+        - "атакую: 3,4"
+        - покажи карты
+        - ответ 25 25
+        - "атакую: 3,8"
+        - покажи карты
+        - ответ 26 26
+        - "атакую: 1,9"
+        - покажи карты
+        - ответ 27 27
+        - "атакую: 6,8"
+        - покажи карты
+        - ответ 28 28
+        - "атакую: 6,9"
+        - покажи карты
+        - вопросы
+        - покажи карты
+
 
 player_2:
     uid: 2
@@ -71,7 +146,3 @@ player_2:
             0 0 0 1 0 0 2 0 0 0
             0 1 0 0 0 0 2 0 0 0
         - играю с командой подзалупник1
-#        - ответ 1 ленин
-#        - "атакую: 1,1"
-#        - "атакую: 3,6"
-#        - "атакую: 3,6"
