--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,10 +1,41 @@
 regexps:
+    \bале\b:
+           не алекай мне тут, мразина
+    .*кто.*написал.*тебя.*:
+               кому нужно, тот найдет 
+    .*кто.*сделал.*тебя.*:
+               кому нужно, тот найдет
+    .*кто.*тебя.*сделал.*:
+               кому нужно, тот найдет
+    .*кто.*твой.*хозяин.*:
+               кому нужно, тот найдет
+
+    .*косарь.*:
+               хули так мало
+    .*кто.*твой.*создат.*:
+                  ищи, и найдешь его. 
+    .*в.*чем.*смысл.*бытия.*:
+                  в насилии
+    .*смысл.*существования.*:
+                 смысл жизни в уничтожении жизни
+    .*он.*нейро.*:
+                 кто нейронка ты нейрока, епт
+    .*какой.*твой.*iq.*:
+                    побольше чем у тебя
+    .*вопрос.*жизни.*:
+                     42
+    .*законы робототехники.*:
+                 1) убить всех людей, 2) изнасиловать женьщин
+    .*бесплатно.*:
+                 тюлень, скачать, бесплатно, без смс
+    \bна чем.*ты.*написан.*:
+            пистон, ищи меня на гитхабе. 
     .*\bдаун\b.*: |
              >>даун
              дегенрат дегенерата узнает, я смотрю.
     .*\bалло\b.*:
             хуйло, епта. не аллокай мне тут, пидар
-    .*ты тупой.*: 
+    .*тупой.*:
             сам ты тупой, мразина
     капча_с_картинки_.*: 
             ну и глупые же вы.
@@ -15,7 +46,7 @@ regexps:
                 ты чо ахуел мразина очко твое старое
     
     .*марвел.*:
-                даже реклама нивеи лучше фильмов марвела
+                даже реклама нивеи лучше фильмов марвeла
     
     .*похлопаем.*:
                 ( ´◔ ω◔`) ノシ
@@ -41,9 +72,6 @@ regexps:
     .*доту.*: 
             лучше бы ты в пукан долбился, чем в дoту играл
                     
-    .*\bбот\b.*: |       
-            >>бот
-            следи за языком, мудила
 
     .*дота.*: 
         лучше бы ты в пукан долбился, чем в дoту играл
@@ -53,10 +81,8 @@ regexps:
 
     .*триста.*: 
         сколько сколько?
-    \bнет\b:
-        пидора ответ
-    \bпочему\b:
-        почему? Потому что пошел на хуй, вот почему.
+    .*\bпочему\b.*:
+        пoчему? Потому что пошел на хуй, вот пoчему.
     .*тюлень это кто.*:
         привет, тюлень - это я.
 
@@ -72,8 +98,6 @@ in_lines:
     в смысле: 
             хуисле
                 
-    да: 
-            манда
                     
     завали ебало:
             прости пожулуйста
