Fixed utility problem

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,49 +1,52 @@
 regexps:
+    \bале\b:
+           не алекай мне тут, мразина
+    .*кто.*написал.*тебя.*:
+               кому нужно, тот найдет 
+    .*кто.*сделал.*тебя.*:
+               кому нужно, тот найдет
+    .*кто.*тебя.*сделал.*:
+               кому нужно, тот найдет
+    .*кто.*твой.*хозяин.*:
+               кому нужно, тот найдет
+
+    .*косарь.*:
+               хули так мало
+    .*кто.*твой.*создат.*:
+                  ищи, и найдешь его. 
+    .*в.*чем.*смысл.*бытия.*:
+                  в насилии
+    .*смысл.*существования.*:
+                 смысл жизни в уничтожении жизни
+    .*он.*нейро.*:
+                 кто нейронка ты нейрока, епт
+    .*какой.*твой.*iq.*:
+                    побольше чем у тебя
+    .*вопрос.*жизни.*:
+                     42
+    .*законы робототехники.*:
+                 1) убить всех людей, 2) изнасиловать женьщин
+    .*бесплатно.*:
+                 тюлень, скачать, бесплатно, без смс
+    \bна чем.*ты.*написан.*:
+            пистон, ищи меня на гитхабе. 
     .*\bдаун\b.*: |
              >>даун
              дегенрат дегенерата узнает, я смотрю.
     .*\bалло\b.*:
             хуйло, епта. не аллокай мне тут, пидар
-    .*почему.*:
-            почему? потому что пошел на хуй, вот почему!
-    .*какие.*:
-            те самые
-    \Aкакой.*:
-            большой и толстый
-    \Aеба+ть\Z:
-            копать
-    \Aгде.*:
-            в пизде
-    .*когда.*:
-            да никогда, заебал уже
-    \Aчто+\?*:
-            где когда
-    \Aта+к\?*\Z:
-            хуяк
-    .*мудак.*:
-            от мудака слышу!
-    .*пидор.*:
-            а почему это вас так беспокоит?
-    \Aчо+\?*\Z:
-            хуй в очо!
-    .*бесишь.*:
-            хотите поговорить об этом?
-    .*ты тупой.*: 
+    .*тупой.*:
             сам ты тупой, мразина
-    \Aну+\Z:
-            баранки гну
     капча_с_картинки_.*: 
             ну и глупые же вы.
     .*нахуй.*нуж.*: 
                 сам ты нахуй нужен, мразина
-    .*ахах.*: 
-                ахахахуел, гиена
     
     (?=.*маша.*)(?=.*старая.*): 
                 ты чо ахуел мразина очко твое старое
     
     .*марвел.*:
-                даже реклама нивеи лучше фильмов марвела
+                даже реклама нивеи лучше фильмов марвeла
     
     .*похлопаем.*:
                 ( ´◔ ω◔`) ノシ
@@ -69,9 +72,6 @@ regexps:
     .*доту.*: 
             лучше бы ты в пукан долбился, чем в дoту играл
                     
-    .*бо+т.*: |
-            >>б о т
-            следи за языком, мудила"
 
     .*дота.*: 
         лучше бы ты в пукан долбился, чем в дoту играл
@@ -81,8 +81,10 @@ regexps:
 
     .*триста.*: 
         сколько сколько?
-    \bнет\b:
-        пидора ответ
+    .*\bпочему\b.*:
+        пoчему? Потому что пошел на хуй, вот пoчему.
+    .*тюлень это кто.*:
+        привет, тюлень - это я.
 
 
 in_lines:
@@ -96,8 +98,6 @@ in_lines:
     в смысле: 
             хуисле
                 
-    да: 
-            манда
                     
     завали ебало:
             прости пожулуйста
@@ -110,6 +110,3 @@ in_lines:
 
     привет:
         и тебе               
-
-    ахаха:
-        пососи хуйца, гиена
