a lot of minor changes and 2captcha support.

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,4 +1,6 @@
 regexps:
+    .*сколько.*лет.*: 25
+    .*лет.*сколько.*: 25
     \bале\b:
            не алекай мне тут, мразина
     .*кто.*написал.*тебя.*:
@@ -35,8 +37,6 @@ regexps:
              дегенрат дегенерата узнает, я смотрю.
     .*\bалло\b.*:
             хуйло, епта. не аллокай мне тут, пидар
-    .*тупой.*:
-            сам ты тупой, мразина
     капча_с_картинки_.*: 
             ну и глупые же вы.
     .*нахуй.*нуж.*: 
@@ -88,7 +88,8 @@ regexps:
 
 
 in_lines:
-
+    МИФИ: 
+        МИФИ шарага
     fail: |
             ▄██████████████▄▐█▄▄▄▄█▌
             ██████▌▄▌▄▐▐▌███▌▀▀██▀▀
