--- a/config/wiki/conf.yaml
+++ b/config/wiki/conf.yaml
@@ -2,5 +2,8 @@
           - "wiki:"
           - "вики:"
           - "скажи википедия"
+          - "тюлень, расскажи о"
+          - "тюлень расскажи о"
+          - "тюлень, что такое"
 
           
