--- a/config/blacklist/conf.yaml
+++ b/config/blacklist/conf.yaml
@@ -1,1 +1,23 @@
 blacklist: blacklist.txt
+
+warning_message: Ну хватит, ебаныйрот. Еще немного и бан схватишь.
+
+ban_message: | 
+        Друге, ты дурак и бан тебе. Если считаешь что не справедливо - иди жалуйся мне на стенку. Иначе - либо донать на каптчу, либо иди нахуй.
+        Донаты кидать нa QIWI +79166317941 или яды https://money.yandex.ru/to/41001705503465 от 30 рублей, с пометкой "на разбан" и вашим айдишником. 
+        Все деньги пойдут в сервис решения каптчи 2captcha.com, чтобы тюлень всегда был с вами. C уважением, поддержка.
+
+master_uid: ~
+
+warning_limit: 9
+ban_limit: 17
+decrement: 1
+
+stopwords: 
+    - цп.жпг 
+    - цп.ави
+    - цп.гиф
+    - цп.jpg 
+    - цп.avi
+    - цп.gif
+
