sea_battle: Added random map generation, fixed map parsing, added bot-game other: new-year phrases, added draft for group-adding module (not really necessary yet)

--- a/config/approve/conf.yaml
+++ b/config/approve/conf.yaml
@@ -20,6 +20,8 @@
     dict: love.txt
 .*ахах.*: 
     dict: dict3.txt
+.*(новый год|рождество|нг|новогод.*|(е|ё)лка).*:
+    dict: newyear.txt
 .*тюлень.*крут.*:
     dict: love.txt
 \Bбот:
