--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -59,6 +59,30 @@ regexps:
                 
     .*сноу(?!.*в короли):
                 сноу - плоский персонаж, скучный и неинтересный.
+
+    .*старк.*:
+            ЗИМА БЛИЗКО БЛЕАТЬ!
+
+    .*ланистер.*:
+            ХИАР МИ РРРОАРРР!
+
+    .*талли.*:
+            Семья, долг, честь, печеньки
+
+    .*таргарие.*:
+            Пламя и кровь не может убить дракона -__-
+
+    .*грейджо.*:
+            Мы не сеем и не жрём
+
+    .*баратеон.*:
+            Нам ярость, вам котлетки
+
+    .*тирелл.*:
+            Вырастая — крепнем (это не про хуи)
+
+    .*мартелл.*:
+            Непреклонные, несгибаемые, несдающиеся, невыдавлевыемые...
                     
     .*член.жпг.*:
                 Мне кажется, у кого то проблемы с личной жизнью.
@@ -69,9 +93,15 @@ regexps:
     .*пизда.жпг.*: 
                 У тебя проблемы в личной жизни?
 
-    .*доту.*: 
+    .*жопа.жпг*:
+            Шож вы такие озабоченные...
+
+    .*игил.*: |
+            >> игил
+            Запрещена в РФ!
+
+    .*доту.*:
             лучше бы ты в пукан долбился, чем в дoту играл
-                    
 
     .*дота.*: 
         лучше бы ты в пукан долбился, чем в дoту играл
