help message improved, som fixes added.

--- a/config/blacklist/conf.yaml
+++ b/config/blacklist/conf.yaml
@@ -6,8 +6,11 @@ ban_message: |
         Друге, ты дурак и бан тебе. Если считаешь что не справедливо - иди жалуйся мне на стенку. Иначе - либо донать на каптчу, либо иди нахуй.
         Донаты кидать нa QIWI +79166317941 или яды https://money.yandex.ru/to/41001705503465 от 30 рублей, с пометкой "на разбан" и вашим айдишником. 
         Все деньги пойдут в сервис решения каптчи 2captcha.com, чтобы тюлень всегда был с вами. C уважением, поддержка.
+unban_message: | 
+        Спасибо, дружище! Не шали больше. Если со мной что случится - смотри нового меня в группе vk.com/seal_in_vacuum
 
-master_uid: ~
+
+master_uid: 5180483
 
 warning_limit: 9
 ban_limit: 17
@@ -20,4 +23,5 @@ stopwords:
     - цп.jpg 
     - цп.avi
     - цп.gif
+    - детское порно.жпг
 
