"who" module added.

--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -81,10 +81,13 @@ regexps:
 
     .*триста.*: 
         сколько сколько?
-    .*\bпочему\b.*:
-        пoчему? Потому что пошел на хуй, вот пoчему.
+
     .*тюлень это кто.*:
         привет, тюлень - это я.
+    .*цп.жпг напишите.*:
+        не  слушайте этого пидара, в бан попадете.
+    .*напишите цп.жпг*:
+        не  слушайте этого пидара, в бан попадете.
 
 
 in_lines:
