--- a/config/blacklist/conf.yaml
+++ b/config/blacklist/conf.yaml
@@ -24,4 +24,22 @@ stopwords:
     - цп.avi
     - цп.gif
     - детское порно.жпг
+    - детское порно.гиф
+    - пoрнo c дeтьми.жпг
+    - порно_с_детьми.жпг
+    - детское порно.ави
+    - пoрнo c дeтьми.ави
+    - порно_с_детьми.ави
+    - детское порно.avi
+    - пoрнo c дeтьми.avi
+    - порно_с_детьми.avi
+    - porn_child.jpg
+    - child_porn.jpg
+    - child porn.jpg
+    - children porn.жпг
+    - children porno.jpg
+    - children porno.жпг
+    - child.porn.jpg
+
+
 
