--- a/config/reply/conf.yaml
+++ b/config/reply/conf.yaml
@@ -1,5 +1,6 @@
 regexps:
     .*сколько.*лет.*: 25
+    .*заложен.*нос.*: соси писос
     .*лет.*сколько.*: 25
     \bале\b:
            не алекай мне тут, мразина
@@ -84,10 +85,14 @@ regexps:
 
     .*тюлень это кто.*:
         привет, тюлень - это я.
+    .*напиши.*цп.жпг.*:
+        не  слушайте этого пидара, в бан попадете.
     .*цп.жпг напишите.*:
         не  слушайте этого пидара, в бан попадете.
     .*напишите цп.жпг*:
         не  слушайте этого пидара, в бан попадете.
+    .*напишите цп.*:
+        не слушайте этого пидара, он вас подставить хочет. За цп я баню.
 
 
 in_lines:
