--- a/config/approve/conf.yaml
+++ b/config/approve/conf.yaml
@@ -1,8 +1,46 @@
+.*аниме.*:
+    dict: anime.txt
+.*тупой.*:
+    dict: stupid.txt
+    private_use: true
+.*\Bда\Z:
+    dict: yes.txt
+^.*\Bнет:
+    dict: no.txt
+.*тюлен.*что.*думаеш.*:
+    dict: opinions_think.txt
+    unique: true
+    private_use: true
+.*тюлен.*как.*относишься.*:
+    dict: opinions_think.txt
+    unique: true
+    private_use: true
+.*как.*дела.*:
+    dict: howyoudoing.txt
+    private_use: true
+.*расскажи.*о.*себе.*:
+    dict: my_life.txt
+    private_use: true
 .*тюлен.*:
     dict: dict.txt
+    private_use: true
+.*тюлень.*я.*тебя.*люблю.*:
+    dict: love.txt
 .*люблю.*тебя.*:
-    dict: dict2.txt
+    dict: love.txt
 .*ахах.*: 
     dict: dict3.txt
-
-
+.*новый.*год.*:
+    dict: newyear.txt
+.*рождество.*:
+    dict: newyear.txt
+.*тюлень.*крут.*:
+    dict: love.txt
+    private_use: true
+\Bбот:
+    dict: bot.txt
+.*что.*делае.*:
+    dict: doing.txt
+    private_use: true
+.*почему.*:
+    dict: why.txt
